Archive2/d5/d17c72f3321b27/output
main.cpp:7:33: error: calling a protected constructor of class 'Base'
        static_assert(!noexcept(Base(42)), "Err"); 
                                ^
main.cpp:3:5: note: protected constructor can only be used to construct a base class subobject
    Base(int); 
    ^
1 error generated.
